--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
+/static/**
+
 # Editor-based HTTP Client requests
 /httpRequests/
+
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+
+# Virtualenvs
+env/
+dev.db
+.cache/v/cache
+
+# Intellij IDEA based IDEs folder
+.idea/**
