--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Default ignored files
 /shelf/
 /.idea/workspace.xml
-/static/**
+/static/train/*
 
 # Editor-based HTTP Client requests
 /httpRequests/
