--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-flask==2.0.2
-Jinja2==3.0.2
-Keras-Preprocessing==1.1.2
+scipy
+scikit-learn>=1.0.1
+wget>=3.2
+Flask==2.0.2
+beautifulsoup4==4.10.0
 keras==2.7.0
+Keras-Preprocessing==1.1.2
 numpy==1.21.4
+requests==2.26.0
 pandas==1.3.4
-scikit-learn==1.0.1
-tensorflow==2.7.0
-wget~=3.2
-requests~=2.26.0
-matplotlib>=2.1.1
-beautifulsoup4~=4.10.0
