--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Default ignored files
 /shelf/
 /.idea/workspace.xml
-
+/static/predict/**
+static/train/**
 # Editor-based HTTP Client requests
 /httpRequests/
 
@@ -17,8 +18,6 @@ env/
 .idea/**
 
 #Unused files
-app/*.py
-
 requirements1.txt
 
 run.py
